--- a/report/src/jdbc.properties
+++ b/report/src/jdbc.properties
@@ -3,17 +3,17 @@
 #jdbc.username=root
 #jdbc.password=root
 
-jdbc.url=jdbc\:mysql\://10.0.0.14\:3306/test
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc\:mysql\://10.0.0.14\:3306/test
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.username=root
+#jdbc.password=root
 
-#jdbc.url=jdbc:sqlserver://58.155.179.46:1533;DatabaseName=yktdb
-#jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#jdbc.username=sa
-#jdbc.password=sa123
+jdbc.url=jdbc:sqlserver://58.155.179.46:1533;DatabaseName=yktdb
+jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbc.username=sa
+jdbc.password=sa123
 
-jdbc2.url=jdbc:sqlserver://58.155.179.46:1533;DatabaseName=yktdb
+jdbc2.url=jdbc:sqlserver://10.1.1.100:1433;DatabaseName=CAREA3000
 jdbc2.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 jdbc2.username=sa
 jdbc2.password=sa123
