--- a/report/src/quartz.properties
+++ b/report/src/quartz.properties
@@ -4,4 +4,4 @@ org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
 org.quartz.plugin.jobInitializer.class =org.quartz.plugins.xml.XMLSchedulingDataProcessorPlugin 
 org.quartz.plugin.jobInitializer.fileNames = quartz-config.xml 
 org.quartz.plugin.jobInitializer.failOnFileNotFound =true
-timer=0/10 * * * * ?
+timer=0 0 12 * * ?
